--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body { 
     padding-left: 12em;
+    padding-right: 12em;
     font-family: sans-serif
 }
+/*
 body.aboutme {
   padding-right: 22em
 }
+*/
 nav {
   position: absolute;
   top: 2em;
