--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,27 @@
   </head>
   <body>
     <h1>James Chapman</h1>
-    <nav>
-      <ul>
-	<li><a href="index.html">About Me</a></li>
-	<li><a href="Publications.html">Publications</a></li>
-	<li><a href="BSN.html">Big-step normalisation</a></li>
-	<li><a href="relmon.html">Relative Monads Formalised</a></li>
-	<li><a href="Teaching.html">Teaching</a></li>
-      </ul>
-    </nav>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+	    <li><a href="index.html">About Me</a></li>
+	    <li><a href="Publications.html">Publications</a></li>
+	    <li><a href="BSN.html">Big-step normalisation</a></li>
+	    <li><a href="relmon.html">Relative Monads Formalised</a></li>
+	    <li><a href="Teaching.html">Teaching</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     <div class="container">
       
       {{ content }}
