--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <h1>James Chapman</h1>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -39,6 +39,7 @@
           </ul>
         </div><!--/.nav-collapse -->
       </div>
+    </nav>
     <div class="container">
       
       {{ content }}
