--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,6 @@
     <![endif]-->
   </head>
   <body>
-    <h1>James Chapman</h1>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -27,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="">James Chapman</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
