--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">James Chapman</a>
+          <a class="navbar-brand" href="index.html">James Chapman</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-	    <li><a href="index.html">About Me</a></li>
 	    <li><a href="Publications.html">Publications</a></li>
 	    <li><a href="BSN.html">Big-step normalisation</a></li>
 	    <li><a href="relmon.html">Relative Monads Formalised</a></li>
