--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 	    <li><a href="Publications.html">Publications</a></li>
-	    <li><a href="BSN.html">Big-step normalisation</a></li>
-	    <li><a href="relmon.html">Relative Monads Formalised</a></li>
+	    <li><a href="BSN.html">Big-Step Normalisation</a></li>
+	    <li><a href="relmon.html">Relative Monads</a></li>
 	    <li><a href="Teaching.html">Teaching</a></li>
           </ul>
         </div><!--/.nav-collapse -->
