--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,14 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <![endif]-->
+     <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Special+Elite">
+    <style>
+      body {
+        font-family: 'Special Elite', cursive;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top">
