--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
       <![endif]-->
      <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Special+Elite">
-    <style>
+    <!-- <style>
       body {
         font-family: 'Special Elite', cursive;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top">
