--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
 	    <li><a href="Publications.html">Publications</a></li>
 	    <li><a href="BSN.html">Big-Step Normalisation</a></li>
 	    <li><a href="relmon.html">Relative Monads</a></li>
+	    <li><a href="Service.html">Service</a></li>
 	    <li><a href="Teaching.html">Teaching</a></li>
           </ul>
         </div><!--/.nav-collapse -->
